# Kiz-Raffle-Project

./: README.md
kiz-raffle-frontend/: package.json
kiz-raffle-frontend/src/components/: Countdown.tsx  Header.tsx  RaffleCard.tsx  ToastGroup.tsx
kiz-raffle-frontend/src/pages/: create.tsx  index.tsx
kiz-raffle-frontend/src/pages/new/: [mint].tsx
kiz-raffle-frontend/src/pages/raffle/: [raffleKey].tsx
kiz-raffle-frontend/src/solana/: transaction.ts
kiz-raffle-frontend/src/solana/whitelist/: levelTwo.json
kiz-raffle-frontend/src/styles/: globals.css
kiz-raffle-frontend/src/utils/: demo.ts  type.ts  util.ts
kiz-raffle-smartcontract/: Anchor.toml  package.json
kiz-raffle-smartcontract/cli/: raffle.ts  scripts.ts  types.ts
kiz-raffle-smartcontract/programs/raffle/: Cargo.toml
kiz-raffle-smartcontract/programs/raffle/src/: account.rs  constants.rs  lib.rs
