[package]
name = "raffle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raffle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
anchor-spl = "0.27.0"
toml_datetime = "=0.6.1"
blake3 = "=1.3.3"
constant_time_eq = "=0.2.5"
winnow = "=0.4.1"
solana-program = "=1.14.17"
bytemuck = "1.13.1"
